--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
   
 .weapon-button {
