--- a/style.css
+++ b/style.css
@@ -28,6 +28,22 @@ body {
 .instruction {
     font-size: 30px;
 }
+
+.main {
+    display:flex;
+    flex-direction: column;
+}
+
+.game-area {
+    display:flex;
+    justify-content: space-around;
+    width: 750px;
+    margin: auto;
+    margin-top: 20px;
+    padding: 15px;
+    border: solid;
+    border-radius: 10px;
+}
   
 .weapon-button {
     background-color: transparent;
@@ -39,16 +55,68 @@ body {
 }
 
 .rock-icon {
-    width: 200px;
+    width: 170px;
     height: auto;
 }
 
 .paper-icon {
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
 }
 
 .scissors-icon {
-    width: 200px;
+    width: 170px;
     height: auto;
+}
+
+.game-output {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 600px;
+    padding: 10px;
+    margin: auto;
+}
+
+.game-choice {
+    width: auto;
+    margin: auto;
+}
+
+.symbol {
+    font-size: 130px;
+}
+
+.identity {
+    font-size: 20px;
+}
+
+.wrapper {
+    display: flex;
+    width: 600px;
+    margin: auto;
+    border: solid;
+    padding: 0 10px;
+}
+
+.game-counter {
+    margin-right: 50px;
+    border-right: solid;
+    padding-right: 10px;
+    width: 150px;
+    text-align: center;
+}
+
+.round {
+    font-size: 20px;
+}
+
+.round-counter {
+    font-size: 50px;
+
+}
+
+.scoreboard {
+    margin: 50px 0;
+    font-size: 20px;
 }
