--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body {
+:root {
+    background-color: beige;
+    color: #644d0d;
     font-family: "Macondo Swash Caps", cursive;
     font-weight: 400;
     font-style: normal;
@@ -9,7 +11,7 @@ body {
 }
 
 .green-color {
-    color: lightgreen;
+    color:darkgreen;
 }
 
 .blue-color {
@@ -48,10 +50,16 @@ body {
 .weapon-button {
     background-color: transparent;
     border: none;
+    color:aliceblue;
 }
 
 .weapon-button:hover {
-    background-color: bisque;
+    background-color: rgb(209, 209, 185);
+    cursor: pointer;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.1);
+    transition: all .3s;
+    
 }
 
 .rock-icon {
@@ -97,6 +105,7 @@ body {
     margin: auto;
     border: solid;
     padding: 0 10px;
+    border-radius: 10px;
 }
 
 .game-counter {
@@ -113,10 +122,37 @@ body {
 
 .round-counter {
     font-size: 50px;
-
 }
 
 .scoreboard {
-    margin: 50px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    font-size: 22px;
+}
+
+.game-end {
+    visibility: visible;
+    display: flex;
+}
+
+.game-restart {
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: 400;
+    font-style: normal;
     font-size: 20px;
+    padding: 10px;
+    margin: 30px auto;
+    background-color: transparent;
+    border: 3px solid;
+    border-radius: 10px;
+    color: #644d0d;
+    border-color: #644d0d;
+}
+
+.game-restart:hover {
+    background-color: #644d0d;
+    color: beige;
+    cursor: pointer;
+    transition: 0.2s linear;
 }
