--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@
 .game-choice {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
+    align-items: center;
     width: 120px;
     height: 200px;
     margin: auto;
